--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,8 +1,4 @@
-/* Section */
-
-.contNosotros{
-    margin-bottom: 100px;
-}
+/* Sobre nosotros */
 
 .imgNosotros, .imgNosotros2{
     position: relative;
@@ -11,15 +7,22 @@
     background-repeat: no-repeat;
     background-size: cover;   
 }
+
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
-    .contNosotros{
+    .imgNosotros, .imgNosotros2{
       background-attachment: scroll;
     }
 }
 
 .imgNosotros{
-    background-image: url("/img/nosotros.jpg");
+    background-image: url("/assets/img/nosotros.jpg");
+    min-height: 600px; 
+    width:55%;
+}
+
+.imgNosotros2{
+    background-image: url("/assets/img/nosotros2.jpg");
     min-height: 600px; 
     width:55%;
 }
@@ -29,8 +32,22 @@
     margin: 25px;
 }
 
-.imgNosotros2{
-    background-image: url("/img/nosotros2.jpg");
-    min-height: 600px; 
-    width:55%;
+/* Contacto */
+
+.textContact{
+    text-align: justify;
 }
+
+
+.textemail{
+    text-align: justify;
+    width: 15%;
+}
+
+
+.colContact{
+    padding: 25px;
+    background-color: rgba(88, 174, 184, 0.089);
+    margin: 15px;
+}
+
