--- a/css/styles.css
+++ b/css/styles.css
@@ -3673,22 +3673,22 @@ textarea.form-control-lg {
   width: 100%;
   padding: 0.25rem 1rem;
   clear: both;
-  font-weight: 400;
-  color: #212529;
+  color: rgb(33, 75, 117);
   text-align: inherit;
   text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
   border: 0;
+  font-size: 13px;
 }
 .dropdown-item:hover, .dropdown-item:focus {
-  color: #1e2125;
+  color: rgb(33, 75, 117);
   background-color: #e9ecef;
 }
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #1abc9c;
+  background-color: rgba(88, 174, 184);
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3729,7 +3729,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #1abc9c;
+  background-color: rgba(88, 174, 184);;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -10854,6 +10854,17 @@ html {
   }
 }
 
+.page-section .page-section-heading2 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+@media (min-width: 992px) {
+  .page-section .page-section-heading2 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
+}
+
 .divider-custom {
   margin: 1.25rem 0 1.5rem;
   width: 100%;
@@ -10863,7 +10874,7 @@ html {
 }
 .divider-custom .divider-custom-line {
   width: 100%;
-  max-width: 40rem;
+  max-width: 33rem;
   height: 0.25rem;
   background-color: #2c3e50;
   border-radius: 1rem;
