--- a/css/styles.css
+++ b/css/styles.css
@@ -10844,12 +10844,12 @@ html {
   padding: 6rem 0;
 }
 .page-section .page-section-heading {
-  font-size: 2rem;
+  font-size: 1.9rem;
   line-height: 2rem;
 }
 @media (min-width: 992px) {
   .page-section .page-section-heading {
-    font-size: 3rem;
+    font-size: 2.3rem;
     line-height: 2.5rem;
   }
 }
@@ -10874,7 +10874,7 @@ html {
 }
 .divider-custom .divider-custom-line {
   width: 100%;
-  max-width: 33rem;
+  max-width: 37.5rem;
   height: 0.25rem;
   background-color: #2c3e50;
   border-radius: 1rem;
@@ -10893,6 +10893,29 @@ html {
 .divider-custom.divider-light .divider-custom-line {
   background-color: #fff;
 }
+/* ----  */
+.divider-custom .divider-custom-line2 {
+  width: 100%;
+  max-width: 33rem;
+  height: 0.25rem;
+  background-color: #2c3e50;
+  border-radius: 1rem;
+  border-color: #2c3e50;
+}
+.divider-custom .divider-custom-line2:first-child {
+  margin-right: 0px;
+}
+.divider-custom .divider-custom-line2:last-child {
+  margin-left: 0px;
+}
+.divider-custom .divider-custom-icon {
+  color: #2c3e50;
+  font-size: 2rem;
+}
+.divider-custom.divider-light .divider-custom-line2 {
+  background-color: #fff;
+}
+
 .divider-custom.divider-light .divider-custom-icon {
   color: #fff;
 }
@@ -11001,8 +11024,9 @@ html {
   font-size: 2.75rem;
   line-height: 2.75rem;
 }
-.masthead .masthead-subheading {
-  font-size: 1.25rem;
+
+.masthead-subheading {
+  font-size: 1.05rem;
 }
 .masthead .masthead-avatar {
   width: 15rem;
@@ -11016,8 +11040,8 @@ html {
     font-size: 4rem;
     line-height: 3.5rem;
   }
-  .masthead .masthead-subheading {
-    font-size: 1.5rem;
+  .masthead-subheading {
+    font-size: 1.2rem;
   }
 }
 
