--- a/css/styles2.css
+++ b/css/styles2.css
@@ -53,51 +53,61 @@
 
 
 /* Servicios */
-.portfolio-item {
+
+.portfolio .portfolio-item3 {
+    position: relative;
+    display: block;
+    max-width: 20rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+
+.portfolio-item3 {
     display: block;
     position: relative;
     overflow: hidden;
     max-width: 530px;
     margin: auto auto 1rem;
   }
-  .portfolio-item .caption {
+  .portfolio-item3 .caption {
     display: flex;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.432);
+    background-color: rgba(0, 0, 0, 0.459);
     position: absolute;
     top: 0;
     bottom: 0;
     z-index: 1;
   }
-  .portfolio-item .caption .caption-content {
+  .portfolio-item3 .caption .caption-content {
     color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    margin: 1rem;
   }
-  .portfolio-item .caption .caption-content h2, .portfolio-item .caption .caption-content .h2 {
+  .portfolio-item3 .caption .caption-content h2, .portfolio-item3 .caption .caption-content .h2 {
     font-size: 0.8rem;
     text-transform: uppercase;
   }
-  .portfolio-item .caption .caption-content p {
+  .portfolio-item3 .caption .caption-content p {
     font-weight: 300;
-    font-size: 1.15rem;
+    font-size: 1.1rem;
   }
+
   @media (min-width: 992px) {
-    .portfolio-item {
+    .portfolio-item3 {
       max-width: none;
       margin: 0;
     }
-    .portfolio-item .caption {
+    .portfolio-item3 .caption {
       transition: background-color 0.25s, -webkit-clip-path 0.25s ease-out;
       transition: clip-path 0.25s ease-out, background-color 0.7s;
       transition: clip-path 0.25s ease-out, background-color 0.7s, -webkit-clip-path 0.25s ease-out;
       -webkit-clip-path: inset(0px);
               clip-path: inset(0px);
     }
-    .portfolio-item .caption .caption-content {
+    .portfolio-item3 .caption .caption-content {
       transition: opacity 0.25s;
       margin: 3rem;
       
@@ -105,20 +115,349 @@
       justify-content: center;
       align-items: center;
     }
-    .portfolio-item img {
+
+    .portfolio-item3 img {
       transition: -webkit-clip-path 0.25s ease-out;
       transition: clip-path 0.25s ease-out;
       transition: clip-path 0.25s ease-out, -webkit-clip-path 0.25s ease-out;
       -webkit-clip-path: inset(-1px);
               clip-path: inset(-1px);
     }
-    .portfolio-item:hover img {
-      -webkit-clip-path: inset(2rem);
-              clip-path: inset(2rem);
+    .portfolio-item3:hover img {
+      -webkit-clip-path: inset(1rem);
+              clip-path: inset(1rem);
     }
-    .portfolio-item:hover .caption {
-      background-color: rgba(29, 129, 159, 0.603);
-      -webkit-clip-path: inset(2rem);
-              clip-path: inset(2rem);
+    .portfolio-item3:hover .caption {
+      background-color: rgba(29, 129, 159, 0.753);
+      -webkit-clip-path: inset(1rem);
+              clip-path: inset(1rem);
     }
+  }
+
+  .portfolio .portfolio-item2{
+    position: relative;
+    max-width: 20rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+  }
+
+  /* calibraciones pesas */
+  .portfolio .pesas-item {
+    position: relative;
+    display: block;
+    max-width: 24rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+
+.pesas-item {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    max-width: 530px;
+    margin: auto auto 1rem;
+  }
+
+.pesas-item .caption {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.459);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
+.pesas-item .caption .caption-content {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+}
+
+.pesas-item .caption .caption-content p {
+    font-weight: 300;
+    font-size: 1.1rem;
+}
+
+/* calibracion en fuerza */
+.portfolio .fuerza-item {
+    position: relative;
+    display: block;
+    max-width: 20rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+
+.fuerza-item {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    max-width: 530px;
+    margin: auto auto 1rem;
+}
+
+.fuerza-item .caption {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.589);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
+.fuerza-item .caption .caption-content {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+}
+
+.fuerza-item .caption .caption-content p {
+  font-weight: 300;
+  font-size: 1.1rem;
+}
+
+
+@media (min-width: 992px) {
+    .fuerza-item {
+      max-width: none;
+      margin: 0;
+    }
+    .fuerza-item .caption {
+      transition: background-color 0.25s, -webkit-clip-path 0.25s ease-out;
+      transition: clip-path 0.25s ease-out, background-color 0.7s;
+      transition: clip-path 0.25s ease-out, background-color 0.7s, -webkit-clip-path 0.25s ease-out;
+      -webkit-clip-path: inset(0px);
+              clip-path: inset(0px);
+    }
+
+    .fuerza-item .caption .caption-content {
+      transition: opacity 0.25s;
+      margin: 1.5rem;
+      
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .fuerza-item .caption .caption-content p {
+        font-weight: 300;
+        font-size: 0.95rem;
+    }
+    
+    .fuerza-item img {
+      transition: -webkit-clip-path 0.25s ease-out;
+      transition: clip-path 0.25s ease-out;
+      transition: clip-path 0.25s ease-out, -webkit-clip-path 0.25s ease-out;
+      -webkit-clip-path: inset(-1px);
+              clip-path: inset(-1px);
+    }
+    .fuerza-item:hover img {
+      -webkit-clip-path: inset(1rem);
+              clip-path: inset(1rem);
+    }
+    .fuerza-item:hover .caption {
+      background-color: rgba(29, 129, 159, 0.753);
+      -webkit-clip-path: inset(1rem);
+              clip-path: inset(1rem);
+    }
+  }
+
+
+/* calibracion en presion */
+.portfolio .presion-item {
+    position: relative;
+    display: block;
+    max-width: 40rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+
+.presion-item .caption {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.562);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
+.presion-item .caption .caption-content {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+}
+
+
+.presion-item .caption .caption-content p{
+    font-size: 1.1rem;
+    line-height: 2rem;
+  }
+  @media (min-width: 992px) {
+    .presion-item .caption .caption-content p {
+        font-weight: 300;
+        font-size: 1.2rem;
+    }
+    
+  }
+
+  /* calibracion en temperatura */
+.portfolio .temperatura-item {
+  position: relative;
+  display: block;
+  max-width: 20rem;
+  max-height: 25rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.temperatura-item .caption {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.589);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.temperatura-item .caption .caption-content {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
+.temperatura-item .caption .caption-content p {
+  font-weight: 300;
+  font-size: 1.1rem;
+}
+
+@media (min-width: 992px) {
+  .temperatura-item{
+    max-width: none;
+    margin: 0;
+  }
+  .temperatura-item .caption {
+    transition: background-color 0.25s, -webkit-clip-path 0.25s ease-out;
+    transition: clip-path 0.25s ease-out, background-color 0.7s;
+    transition: clip-path 0.25s ease-out, background-color 0.7s, -webkit-clip-path 0.25s ease-out;
+    -webkit-clip-path: inset(0px);
+            clip-path: inset(0px);
+  }
+
+  .temperatura-item .caption .caption-content {
+    transition: opacity 0.25s;
+    margin: 1.5rem;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .temperatura-item .caption .caption-content p {
+      font-weight: 300;
+      font-size: 1.1rem;
+  }
+  
+  .temperatura-item img {
+    transition: -webkit-clip-path 0.25s ease-out;
+    transition: clip-path 0.25s ease-out;
+    transition: clip-path 0.25s ease-out, -webkit-clip-path 0.25s ease-out;
+    -webkit-clip-path: inset(-1px);
+            clip-path: inset(-1px);
+  }
+  .temperatura-item:hover img {
+    -webkit-clip-path: inset(1rem);
+            clip-path: inset(1rem);
+  }
+  .temperatura-item:hover .caption {
+    background-color: rgba(29, 129, 159, 0.753);
+    -webkit-clip-path: inset(1rem);
+            clip-path: inset(1rem);
+  }
+}
+
+
+  /* Servicio de mantenimiento */
+  .portfolio .mantenimiento-item {
+    position: relative;
+    display: block;
+    max-width: 50rem;
+    max-height: 20rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+  }
+  
+  .mantenimiento-item .caption {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.320);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+  }
+  
+  .mantenimiento-item .caption .caption-content {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+  }
+  
+  .mantenimiento-item .caption .caption-content p {
+    font-weight: 300;
+    font-size: 1.1rem;
+  }
+  
+  @media (min-width: 992px) {
+    .mantenimiento-item{
+      max-width: none;
+      margin: 0;
+    }
+    .mantenimiento-item .caption {
+      transition: background-color 0.25s, -webkit-clip-path 0.25s ease-out;
+      transition: clip-path 0.25s ease-out, background-color 0.7s;
+      transition: clip-path 0.25s ease-out, background-color 0.7s, -webkit-clip-path 0.25s ease-out;
+      -webkit-clip-path: inset(0px);
+              clip-path: inset(0px);
+    }
+  
+    .mantenimiento-item .caption .caption-content {
+      transition: opacity 0.25s;
+      margin: 1.5rem;
+      
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .mantenimiento-item .caption .caption-content p {
+        font-weight: 400;
+        font-size: 1.25rem;
+    }
+    
+    .mantenimiento-item img {
+      transition: -webkit-clip-path 0.25s ease-out;
+      transition: clip-path 0.25s ease-out;
+      transition: clip-path 0.25s ease-out, -webkit-clip-path 0.25s ease-out;
+      -webkit-clip-path: inset(-1px);
+              clip-path: inset(-1px);
+    }
+    
   }
