--- a/css/styles.css
+++ b/css/styles.css
@@ -10843,6 +10843,11 @@ html {
 .page-section {
   padding: 6rem 0;
 }
+
+.page-section2 {
+  padding-bottom: 6rem;
+}
+
 .page-section .page-section-heading {
   font-size: 1.9rem;
   line-height: 2rem;
