--- a/css/styles2.css
+++ b/css/styles2.css
@@ -140,3 +140,18 @@
             clip-path: inset(0.5rem);
   }
 }
+
+
+/* Nuestros clientes */
+
+.portfolio .portfolio-item2 {
+  position: relative;
+  display: block;
+  max-width: 15rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
