--- a/css/styles.css
+++ b/css/styles.css
@@ -10920,7 +10920,6 @@ html {
     max-width: 25rem;
     border-radius: 0.5rem;
     overflow: hidden;
-
 }
 
 .portfolio .portfolio-item .portfolio-item-caption {
@@ -11078,7 +11077,7 @@ html {
     position: relative;
     display: block;
     max-width: 50rem;
-    max-height: 35rem;
+    min-height: 35rem;
     border-radius: 0.5rem;
     overflow: hidden;
 }
