--- a/css/styles2.css
+++ b/css/styles2.css
@@ -136,7 +136,7 @@
     display: flex;
     height: 100%;
     width: 100%;
-    background-color: rgba(33, 37, 41, 0.2);
+    /*background-color: rgba(33, 37, 41, 0.2);*/
     position: absolute;
     top: 0;
     bottom: 0;
